--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,7 @@
     border-radius: 20px;
     width: 100%;
     max-width: 500px;
+    margin:0 auto; 
 }
 .container{
     padding-left: 20px;
@@ -17,7 +18,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 400px;
-    margin: 0;
+    margin: 0 auto;
     background: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);;
     font-family: 'Playfair Display', serif;
 }
